# NCV

./: .gitignore  CMakeLists.txt  README-ru.md  README.md  changelog.md
include/: alert.h  arg_parser.h  args.h  debug.h  double_buffer.h  drawer.h  dynamic_bitset.h  error_codes.h  files.h  frame.h  frame_group.h  int_pair.h  interthread.h  main.h  ncurses_wrap.h  ncv_assert.h  pair_utils.h  palette.h  reader.h  renderer.h  rgb.h  throw_if_error.h
src/: alert.cpp  alert.h  arg_parser.cpp  args.cpp  audio_reader.cpp  base_reader.cpp  debug.cpp  default_colors.cpp  double_buffer.cpp  drawer.cpp  dynamic_bitset.cpp  example.cpp  files.cpp  frame.cpp  frame_group.cpp  image.cpp  image_entry.cpp  int_pair.cpp  interthread.cpp  main.cpp  ncurses_wrap.cpp  ncurses_wrap.h  ncv_assert.h  palette.cpp  quantizied_image.cpp  reader.cpp  renderer.cpp  rgb.cpp  start.cpp  video_reader.cpp
test/: dynamic_bitset_test  dynamic_bitset_test.cpp
